feature_request_42 (#133)
- ***Breaking changes***: requires `Glow Worm Luciferin` firmware (v5.12.9).   
- **Introducing the [Luciferin surround lighting with satellites](https://github.com/sblantipodi/firefly_luciferin/wiki/Surround-lighting-with-satellites). Closes [#97](https://github.com/sblantipodi/firefly_luciferin/issues/97).**
- **[Added Wayland support for Linux.](https://github.com/sblantipodi/firefly_luciferin/wiki/Linux-support#luciferin-supports-wayland)** Thanks @h7io for the contribution to this feature. Closes [#130](https://github.com/sblantipodi/firefly_luciferin/issues/130).
- **It's now possible to [**disable Glow Worm device auto discovery**](https://github.com/sblantipodi/firefly_luciferin/wiki/Static-IP-and-auto-discovery) in Firefly Luciferin PC software.** This is useful when PC and ESP lives in separate VLANs/Subnets. Closes [#132](https://github.com/sblantipodi/firefly_luciferin/issues/132).
- **Added the possibility to average the color of the screen on all the LEDs**. 
- **Big performance improvements for [Linux](https://github.com/sblantipodi/firefly_luciferin/wiki/Linux-support) while running on X11.**
- **Added an optimization for [Linux users that is specific for NVIDIA GPUs](https://github.com/sblantipodi/firefly_luciferin/wiki/Linux-support#nvidia-cuda).** Thanks to @Phoshi for the support on this feature.
- **Ram usage improvements.**
- **UI/UX improvements.** Revamped title bar, one left click on tray icon now open settings. Double left click on tray icon starts/stops screen capture, right left click opens the menu as usual. (Windows only, Linux version has no tray bar).
- Added an option during the installation process to create a desktop shortcut to Firefly Luciferin (Windows only).
- Added an option during the installation process to create a start menu shortcut to Firefly Luciferin (Windows only).
- Potential off-heap memory leak on Linux. Fixed. Thanks @jypma for fixing this issue. Closes [#147](https://github.co